--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -190,7 +190,8 @@ services:
         mc alias set local http://minio:9000 minioadmin minioadmin123 && break;
         echo 'MinIO no listo todavía, reintentando...'; sleep 2;
       done &&
-      mc mb -p local/spark &&
+      mc mb -p local/spark || true &&
+      mc mb -p local/hospital || true &&
       mc anonymous set download local/spark &&
       tail -f /dev/null
       "
@@ -213,7 +214,7 @@ services:
       - "4040-4050:4040-4050" # necesario para acceder a streaming UI           
     environment:
       - JUPYTER_ENABLE_LAB=yes
-      - SPARK_MASTER=spark-net://spark-master:7077
+      - SPARK_MASTER=spark://spark-master:7077
       - PYSPARK_PYTHON=/usr/bin/python3
       - PYSPARK_DRIVER_PYTHON=/usr/bin/python3
       # - SPARK_HOME=/opt/spark
@@ -248,7 +249,7 @@ services:
         log.dirs=/tmp/kraft-combined-logs
 
         listeners=PLAINTEXT://:9092,EXTERNAL://:9094,CONTROLLER://:9093
-        advertised.listeners=PLAINTEXT://kafka:9092,EXTERNAL://192.168.0.12:9094
+        advertised.listeners=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
         listener.security.protocol.map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
         controller.listener.names=CONTROLLER
         inter.broker.listener.name=PLAINTEXT
