--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -26,7 +26,7 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: pyspark==4.0.1 delta-spark apache-airflow-providers-apache-spark apache-airflow-providers-amazon
+    _PIP_ADDITIONAL_REQUIREMENTS: ''
     # _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
@@ -37,6 +37,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
     - ../pipelines/spark-apps:/opt/spark-apps
     - ../pipelines/data:/opt/spark-data
+    - ../docs/visualizaciones:/opt/visualizaciones
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
